--- a/index.html
+++ b/index.html
@@ -9,3 +9,17 @@
 </head>
 
 <body>
+
+	<header>
+		<div>
+			<img class="corn" src="img/robot-head-left.svg" alt="Left Part of the Robot">
+			<img class="corn" src="img/robot-head-right.svg" alt="Left Part of the Robot">
+			<img class="corn" src="img/robot-body.svg" alt="Left Part of the Robot">
+			<img class="corn" src="img/robot-brain.svg" alt="Left Part of the Robot">
+		</div>
+	</header>
+
+
+
+
+
