--- a/index.html
+++ b/index.html
@@ -5,18 +5,18 @@
   <title>Grains</title>
   <link href="css/main.css" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-<link href='http://fonts.googleapis.com/css?family=Merriweather:400,700,700italic,300' rel='stylesheet' type='text/css'>
-</head>
+<link href='http://fonts.googleapis.com/css?family=Contrail+One' rel='stylesheet' type='text/css'>
 
 <body>
 
 	<header>
 		<div>
-			<img class="corn" src="img/robot-head-left.svg" alt="Left Part of the Robot">
-			<img class="corn" src="img/robot-head-right.svg" alt="Left Part of the Robot">
-			<img class="corn" src="img/robot-body.svg" alt="Left Part of the Robot">
-			<img class="corn" src="img/robot-brain.svg" alt="Left Part of the Robot">
+			<img class="left" src="img/robot-head-left.svg" alt="Left Part of the Robot">
+			<img class="right" src="img/robot-head-right.svg" alt="Left Part of the Robot">
+			<img class="body" src="img/robot-body.svg" alt="Left Part of the Robot">
+			<img class="brain" src="img/robot-brain.svg" alt="Left Part of the Robot">
 		</div>
+		<h1>Exterminate</h1>
 	</header>
 
 
